# hip_placement_new

./: CMakeLists.txt  README.md
scripts/: configure-cuda.sh  configure-hip.sh
src/: CMakeLists.txt  main.cpp
